--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.8",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "node-sass": "^7.0.1",
@@ -24,6 +25,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
