--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.6.0"
+    "express": "^4.17.3",
+    "mongodb": "^3.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
