--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.3",
-    "mongodb": "^3.7.3"
+    "mysql2": "^2.3.3",
+    "node-input-validator": "^4.5.0",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.15"
   }
 }
